<resources>
    <string name="app_name">G2 Pics</string>
    <string name="take_photo">Take Photo</string>
    <string name="delete_last_photo">Delete Last Photo</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="view_finder">View Finder</string>
    <string name="view_last_photo">View last photo</string>
    <string name="scanning_with">Scanning with</string>
    <string name="scanner_library">Scanner Library</string>
    <string name="result">Result</string>
    <string name="copy">Copy</string>
    <string name="scan_with_ml_kit">Add Inventory Photos</string>
    <string name="scan_with_zxing">View Current Photos</string>
    <string name="developed_by_maulik_hirani">"Developed By Richard L."</string>
</resources>