<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:background="@android:color/black"
    tools:context=".ui.BarcodeScanningActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/focusBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/focus_ring"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/cameraPreview"
        app:layout_constraintBottom_toBottomOf="@id/cameraPreview"
        app:layout_constraintStart_toStartOf="@id/cameraPreview"
        app:layout_constraintEnd_toEndOf="@id/cameraPreview"
        />

    <Button
        android:id="@+id/btnModeStandard"
        style="@style/ModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Std"
        app:icon="@drawable/ic_mode_standard"
        app:iconGravity="top"
        app:layout_constraintEnd_toStartOf="@+id/btnModeMacro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnModeMacro"
        style="@style/ModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Macro"
        app:icon="@drawable/ic_mode_macro"
        app:iconGravity="top"
        app:layout_constraintEnd_toStartOf="@+id/btnModeWide"
        app:layout_constraintStart_toEndOf="@+id/btnModeStandard"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModeWide"
        style="@style/ModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Wide"
        app:icon="@drawable/ic_mode_ultrawide"
        app:iconGravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnModeMacro"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- MODIFIED: Changed from TextView to MaterialButton to correctly handle cornerRadius and clicks -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrientationToggle"
        style="@style/QrDisplayButton"
        android:layout_marginTop="12dp"
        android:text="INV-000000"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btnModeMacro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <RelativeLayout
        android:id="@+id/controlsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnThumbnail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flash_button_background"
            android:contentDescription="@string/view_last_photo"
            android:padding="4dp"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/processingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btnThumbnail"
            android:layout_alignTop="@id/btnThumbnail"
            android:layout_alignEnd="@id/btnThumbnail"
            android:layout_alignBottom="@id/btnThumbnail"
            android:visibility="gone"
            tools:visibility="visible"/>

        <ImageButton
            android:id="@+id/btnShutter"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:background="@drawable/flash_button_background"
            android:contentDescription="@string/take_photo"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera"
            tools:src="@android:drawable/ic_menu_camera" />
        <ImageButton
            android:id="@+id/btnDeleteLast"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/flash_button_background"
            android:contentDescription="@string/delete_last_photo"
            android:padding="12dp"
            android:src="@drawable/ic_delete"
            tools:src="@android:drawable/ic_menu_delete" />
        <TextView
            android:id="@+id/tvSuffixCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btnShutter"
            android:layout_alignBottom="@id/btnShutter"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/btnShutter"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="1" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>